TP8-Tavarifun/tests/bad/struct/t04.ml
type pair = { left: int; right: int } ;;
let a : pair = { left = 1; mutable right = 2 } ;;
a.right <- false ;;
